# va-novo-projeto-va-gateway--api-gateway-em-rust

./: .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
crates/va-novo-projeto-va-gateway--api-gateway-em-rust-server/: Cargo.toml
src/: config.rs  db.rs  error.rs  handlers.rs  main.rs  routes.rs
src/tests/: integration_tests.rs
